# opencv_practice_conan

./: CMakeLists.txt  README.md  conanfile.txt  prerequisites.sh  test.py
assets/video/: katya.avi
src/: 00_main.cpp  01_main.cpp  02_main.cpp  03_main.cpp  04_main.cpp  05_main.cpp  06_main.cpp  07_main.cpp  08_main.cpp  09_main.cpp  10_main.cpp  11_main.cpp  12_main.cpp  14_main.cpp  15_main.cpp  16_main.cpp  17_main.cpp  18_main.cpp  CMakeLists.txt
